<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lunchbox.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.lunchbox.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.lunchbox.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.lunchbox.ui.notifications.NotificationsFragment"
        android:label="Notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/offersFragment"
        android:name="com.example.lunchbox.ui.offers.OffersCompleted"
        android:label="Offers"
        tools:layout="@layout/fragment_offers_completed"
        >
        <action
            android:id="@+id/action_offers_to_sent"
            app:destination="@id/sentFragment" />
        <action
            android:id="@+id/action_offersFragment_to_receivedFragment"
            app:destination="@id/receivedFragment" />
    </fragment>

    <fragment
        android:id="@+id/sentFragment"
        android:name="com.example.lunchbox.ui.offers.OffersSent"
        android:label="Sent"
        tools:layout="@layout/fragment_offers_sent"
        >
        <action
            android:id="@+id/action_sentFragment_to_receivedFragment"
            app:destination="@id/receivedFragment" />
        <action
            android:id="@+id/action_sentFragment_to_offersFragment"
            app:destination="@id/offersFragment" />
    </fragment>

    <fragment
        android:id="@+id/receivedFragment"
        android:name="com.example.lunchbox.ui.offers.OffersReceived"
        android:label="Received"
        tools:layout="@layout/fragment_offers_received">
        <action
            android:id="@+id/action_receivedFragment_to_sentFragment"
            app:destination="@id/sentFragment" />
        <action
            android:id="@+id/action_receivedFragment_to_offersFragment"
            app:destination="@id/offersFragment" />
    </fragment>

</navigation>